--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
     />
 
-    <!-- MAIN CSS FILE -->
+    <!-- MAIN CSS FILES -->
     <link rel="stylesheet" href="assets/styles/main.css" />
+    <link rel="stylesheet" href="assets/styles/navigation.css" />
+    <link rel="stylesheet" href="assets/styles/hero.css" />
 
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -24,7 +26,54 @@
     />
   </head>
   <body>
-    <p>our file</p>
+    <!-- sof: navigation -->
+    <nav class="navigation">navigation</nav>
+    <!-- eof: navigation -->
+
+    <!-- sof: hero -->
+    <div class="hero">
+      <!-- sof: hero container -->
+      <div class="hero-container">
+        <div class="container">
+          <div class="col-2">One of three columns</div>
+          <div class="col-6 hero-container-column-meta">
+            <h1>Welcome to Fridge Friday!</h1>
+            <p>
+              Don't let your leftover ingredients go to waste. We create recipes
+              based on the ingredients you have on hand, helping you reduce food
+              waste and increase flavor in your meals. Try it out now!
+            </p>
+            <button class="button button-primary">FIND OUT MORE</button>
+          </div>
+          <div class="col"></div>
+        </div>
+      </div>
+      <!-- eof: hero container -->
+
+      <div class="hero-background"></div>
+    </div>
+    <!-- eof: hero -->
+
+    <main id="main" role="main">
+      <!-- sof: search recipe -->
+      <section class="search-recipe">search recipe section</section>
+      <!-- eof: search recipe -->
+
+      <!-- sof: popular recipes -->
+      <section class="popular-recipes">popular recipes section</section>
+      <!-- eof: popular recipes -->
+
+      <!-- sof: promo -->
+      <section class="promo">promo section</section>
+      <!-- eof: promo -->
+
+      <!-- sof: promo -->
+      <section class="testimonials">testimonials section</section>
+      <!-- eof: promo -->
+    </main>
+
+    <footer class="footer">footer</footer>
+
     <!-- JQUERY & BOOTSTRAP -->
     <script
       src="https://code.jquery.com/jquery-3.6.3.min.js"
