--- a/index.html
+++ b/index.html
@@ -1,88 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fridge Friday</title>
 
-    <!-- BOOTSTRAP -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Fridge Friday</title>
 
-    <!-- MAIN CSS FILES -->
-    <link rel="stylesheet" href="assets/styles/main.css" />
-    <link rel="stylesheet" href="assets/styles/navigation.css" />
-    <link rel="stylesheet" href="assets/styles/hero.css" />
+  <!-- BOOTSTRAP -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" />
 
-    <!-- GOOGLE FONTS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <!-- sof: navigation -->
-    <nav class="navigation">navigation</nav>
-    <!-- eof: navigation -->
+  <!-- MAIN CSS FILES -->
+  <link rel="stylesheet" href="assets/styles/main.css" />
+  <link rel="stylesheet" href="assets/styles/navigation.css" />
+  <link rel="stylesheet" href="assets/styles/hero.css" />
+  <link rel="stylesheet" href="assets/styles/promo.css" />
 
-    <!-- sof: hero -->
-    <div class="hero">
-      <!-- sof: hero container -->
-      <div class="hero-container">
-        <div class="container">
-          <div class="col-2">One of three columns</div>
-          <div class="col-6 hero-container-column-meta">
-            <h1>Welcome to Fridge Friday!</h1>
-            <p>
-              Don't let your leftover ingredients go to waste. We create recipes
-              based on the ingredients you have on hand, helping you reduce food
-              waste and increase flavor in your meals. Try it out now!
-            </p>
-            <button class="button button-primary">FIND OUT MORE</button>
-          </div>
-          <div class="col"></div>
+  <!-- GOOGLE FONTS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+  <!-- sof: navigation -->
+  <nav class="navigation">navigation</nav>
+  <!-- eof: navigation -->
+
+  <!-- sof: hero -->
+  <div class="hero">
+    <!-- sof: hero container -->
+    <div class="hero-container">
+      <div class="container">
+        <div class="col-2">One of three columns</div>
+        <div class="col-6 hero-container-column-meta">
+          <h1>Welcome to Fridge Friday!</h1>
+          <p>
+            Don't let your leftover ingredients go to waste. We create recipes
+            based on the ingredients you have on hand, helping you reduce food
+            waste and increase flavor in your meals. Try it out now!
+          </p>
+          <button class="button button-primary">FIND OUT MORE</button>
         </div>
+        <div class="col"></div>
       </div>
-      <!-- eof: hero container -->
-
-      <div class="hero-background"></div>
     </div>
-    <!-- eof: hero -->
+    <!-- eof: hero container -->
 
-    <main id="main" role="main">
-      <!-- sof: search recipe -->
-      <section class="search-recipe">search recipe section</section>
-      <!-- eof: search recipe -->
+    <div class="hero-background"></div>
+  </div>
+  <!-- eof: hero -->
 
-      <!-- sof: popular recipes -->
-      <section class="popular-recipes">popular recipes section</section>
-      <!-- eof: popular recipes -->
+  <main id="main" role="main">
+    <!-- sof: search recipe -->
+    <section class="search-recipe">search recipe section</section>
+    <!-- eof: search recipe -->
 
-      <!-- sof: promo -->
-      <section class="promo">promo section</section>
-      <!-- eof: promo -->
+    <!-- sof: popular recipes -->
+    <section class="popular-recipes">popular recipes section</section>
+    <!-- eof: popular recipes -->
 
-      <!-- sof: promo -->
-      <section class="testimonials">testimonials section</section>
-      <!-- eof: promo -->
-    </main>
+    <!-- sof: promo -->
+    <section class="promo">
 
-    <footer class="footer">footer</footer>
+      <div class="promo-header">
+        <h1>Don't let your leftovers go to waste!</h1>
+      </div>
+      <div class="promo-text">
+        <p>Are you looking for new and creative ways to use up your ingredients? Fridge Friday can help!</p>
+      </div>
+      <button class="button button-primary">GET RECIPE IDEAS</button>
 
-    <!-- JQUERY & BOOTSTRAP -->
-    <script
-      src="https://code.jquery.com/jquery-3.6.3.min.js"
-      integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
-      crossorigin="anonymous"
-    ></script>
+    </section>
+    <!-- eof: promo -->
 
-    <!-- APP JS SCRIPT -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/app.js"></script>
-  </body>
+    <!-- sof: promo -->
+    <section class="testimonials">testimonials section</section>
+    <!-- eof: promo -->
+  </main>
+
+  <footer class="footer">footer</footer>
+
+  <!-- JQUERY & BOOTSTRAP -->
+  <script src="https://code.jquery.com/jquery-3.6.3.min.js"
+    integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+
+  <!-- APP JS SCRIPT -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/app.js"></script>
+</body>
+
 </html>
