added name to boxes in testimonial

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                 commodi ad reiciendis itaque illum dignissimos eaque quasi
                 laboriosam ipsam voluptatem temporibus? Cupiditate!
               </p>
+              <p class="testimonial-boxes-name">JOHN DOE</p>
             </div>
             <div class="testimonials-boxes col">
               <img src="" alt="" />
@@ -111,6 +112,7 @@
                 dolorem. Fugiat voluptas, tempore, in quam ut necessitatibus eos
                 porro vel explicabo quia accusantium!
               </p>
+              <p class="testimonial-boxes-name">DORIS DOE</p>
             </div>
             <div class="testimonials-boxes col">
               <img src="" alt="" />
@@ -120,6 +122,7 @@
                 aut. Ea vel eligendi veniam doloremque! Ullam voluptatibus
                 molestiae rem at sapiente!
               </p>
+              <p class="testimonial-boxes-name">DORIS DOE</p>
             </div>
           </div>
         </div>
