added images to image folder and added them to testimonial section

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           </div>
           <div class="testimonials-boxes-container">
             <div class="testimonials-boxes col">
-              <img src="" alt="" />
+              <img src="assets\images\testimonial-image-1.webp" alt="" />
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Quaerat, sed veniam, animi odio delectus nulla sequi aliquid
@@ -135,7 +135,7 @@
               <p class="testimonial-boxes-name">JOHN DOE</p>
             </div>
             <div class="testimonials-boxes col">
-              <img src="" alt="" />
+              <img src="assets\images\testimonial-image-2.webp" alt="" />
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non
                 aliquid tempore, labore inventore deleniti ipsam? Mollitia,
@@ -145,7 +145,7 @@
               <p class="testimonial-boxes-name">DORIS DOE</p>
             </div>
             <div class="testimonials-boxes col">
-              <img src="" alt="" />
+              <img src="assets\images\testimonial-image-3.webp" alt="" />
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
                 quibusdam quo, deserunt mollitia tenetur numquam atque non porro
