--- a/index.html
+++ b/index.html
@@ -125,7 +125,11 @@
           </div>
           <div class="testimonials-boxes-container">
             <div class="testimonials-boxes col">
-              <img src="assets\images\testimonial-image-1.webp" alt="" />
+              <img
+                class="testimonials-image"
+                src="assets\images\testimonial-image-1.webp"
+                alt="A photo of the testimonial giver"
+              />
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Quaerat, sed veniam, animi odio delectus nulla sequi aliquid
@@ -135,7 +139,11 @@
               <p class="testimonial-boxes-name">JOHN DOE</p>
             </div>
             <div class="testimonials-boxes col">
-              <img src="assets\images\testimonial-image-2.webp" alt="" />
+              <img
+                class="testimonials-image"
+                src="assets\images\testimonial-image-2.webp"
+                alt="A photo of the testimonial giver"
+              />
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non
                 aliquid tempore, labore inventore deleniti ipsam? Mollitia,
@@ -145,7 +153,11 @@
               <p class="testimonial-boxes-name">DORIS DOE</p>
             </div>
             <div class="testimonials-boxes col">
-              <img src="assets\images\testimonial-image-3.webp" alt="" />
+              <img
+                class="testimonials-image"
+                src="assets\images\testimonial-image-3.webp"
+                alt="A photo of the testimonial giver"
+              />
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
                 quibusdam quo, deserunt mollitia tenetur numquam atque non porro
