changed placeholder text

--- a/index.html
+++ b/index.html
@@ -131,12 +131,14 @@
                 alt="A photo of the testimonial giver"
               />
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quaerat, sed veniam, animi odio delectus nulla sequi aliquid
-                commodi ad reiciendis itaque illum dignissimos eaque quasi
-                laboriosam ipsam voluptatem temporibus? Cupiditate!
+                I've been using this recipe website for a few months now and I
+                absolutely love it! The search function makes it easy to find
+                exactly what I'm looking for, and the step-by-step instructions
+                are always clear and easy to follow. Plus, the photos of each
+                recipe are so mouthwatering that I can't resist trying new
+                dishes!
               </p>
-              <p class="testimonial-boxes-name">JOHN DOE</p>
+              <p class="testimonial-boxes-name">GRANT BOLTON</p>
             </div>
             <div class="testimonials-boxes col">
               <img
@@ -145,12 +147,14 @@
                 alt="A photo of the testimonial giver"
               />
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non
-                aliquid tempore, labore inventore deleniti ipsam? Mollitia,
-                dolorem. Fugiat voluptas, tempore, in quam ut necessitatibus eos
-                porro vel explicabo quia accusantium!
+                As a busy mom, I don't have a lot of time to plan out my
+                family's meals. But this recipe website has made meal planning
+                so much easier! I can search for recipes by ingredient, prep
+                time, and more, so I can find something that fits my needs and
+                schedule. Plus, my family has loved every recipe we've tried so
+                far!
               </p>
-              <p class="testimonial-boxes-name">DORIS DOE</p>
+              <p class="testimonial-boxes-name">ANNA KLEIN</p>
             </div>
             <div class="testimonials-boxes col">
               <img
@@ -159,12 +163,14 @@
                 alt="A photo of the testimonial giver"
               />
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
-                quibusdam quo, deserunt mollitia tenetur numquam atque non porro
-                aut. Ea vel eligendi veniam doloremque! Ullam voluptatibus
-                molestiae rem at sapiente!
+                I'm not the most confident cook, but this recipe website has
+                helped me feel more comfortable in the kitchen. The detailed
+                instructions make it easy to follow along, and the helpful tips
+                and variations give me the freedom to customize recipes to my
+                liking. I've already recommended this website to all of my
+                friends!
               </p>
-              <p class="testimonial-boxes-name">DORIS DOE</p>
+              <p class="testimonial-boxes-name">IRENE LUCERO</p>
             </div>
           </div>
         </div>
