feat: add lookup api url build function

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="assets/styles/navigation.css" />
     <link rel="stylesheet" href="assets/styles/hero.css" />
     <link rel="stylesheet" href="assets/styles/search.css" />
+    <link rel="stylesheet" href="assets/styles/popular-recipes.css" />
     <link rel="stylesheet" href="assets/styles/promo.css" />
     <link rel="stylesheet" href="assets/styles/testimonials.css" />
 
@@ -93,7 +94,16 @@
       <!-- eof: search recipe -->
 
       <!-- sof: popular recipes -->
-      <section class="popular-recipes">popular recipes section</section>
+      <section class="popular-recipes">
+        <div class="container">
+          <h2>Popular Recipes</h2>
+          <div class="popular-recipes-wraper">
+            <div>1</div>
+            <div>1</div>
+            <div>1</div>
+          </div>
+        </div>
+      </section>
       <!-- eof: popular recipes -->
 
       <!-- sof: promo -->
