--- a/index.html
+++ b/index.html
@@ -96,11 +96,73 @@
       <!-- sof: popular recipes -->
       <section class="popular-recipes">
         <div class="container">
-          <h2>Popular Recipes</h2>
-          <div class="popular-recipes-wraper">
-            <div>1</div>
-            <div>1</div>
-            <div>1</div>
+          <div class="popular-recipes-meta">
+            <h2>Popular Recipes</h2>
+            <p>
+              These recipes have proven to be fan favorites, and we are sure
+              they will be a hit with you and your loved ones as well.
+            </p>
+          </div>
+          <div class="popular-recipes-wrapper">
+            <div class="popular-recipes-card">
+              <div class="popular-recipe-card-image">
+                <img
+                  src="./assets/images/popular-recipe-template.webp"
+                  alt="recipe image"
+                />
+              </div>
+              <div class="popular-recipe-card-body">
+                <h5 class="popular-recipe-card-title">
+                  Baked salmon with fennel & tomatoes
+                </h5>
+                <p class="popular-recipe-card-description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
+                  nec placerat magna. Phasellus pharetra bibendum massa,
+                  ullamcorper egestas nunc ultricies eget.
+                </p>
+                <button class="button button-primary">See More</button>
+              </div>
+            </div>
+
+            <div class="popular-recipes-card">
+              <div class="popular-recipe-card-image">
+                <img
+                  src="./assets/images/popular-recipe-template.webp"
+                  alt="recipe image"
+                />
+              </div>
+              <div class="popular-recipe-card-body">
+                <h5 class="popular-recipe-card-title">
+                  Baked salmon with fennel & tomatoes
+                </h5>
+                <p class="popular-recipe-card-description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
+                  nec placerat magna. Phasellus pharetra bibendum massa,
+                  ullamcorper egestas nunc ultricies eget.
+                </p>
+                <button class="button button-primary">See More</button>
+              </div>
+            </div>
+
+            <div class="popular-recipes-card">
+              <div class="popular-recipe-card-image">
+                <img
+                  src="./assets/images/popular-recipe-template.webp"
+                  alt="recipe image"
+                />
+              </div>
+              <div class="popular-recipe-card-body">
+                <h5 class="popular-recipe-card-title">
+                  Baked salmon with fennel & tomatoes
+                </h5>
+                <p class="popular-recipe-card-description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
+                  nec placerat magna. Phasellus pharetra bibendum massa,
+                  ullamcorper egestas nunc ultricies eget.
+                </p>
+                <button class="button button-primary">See More</button>
+              </div>
+            </div>
           </div>
         </div>
       </section>
