--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- APP JS SCRIPT -->
+    <script src="assets/js/utils.js"></script>
     <script src="assets/js/api.js"></script>
     <script src="assets/js/app.js"></script>
   </body>
