--- a/index.html
+++ b/index.html
@@ -1,45 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fridge Friday</title>
 
-    <!-- BOOTSTRAP -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Fridge Friday</title>
 
-    <!-- MAIN CSS FILES -->
-    <link rel="stylesheet" href="assets/styles/main.css" />
-    <link rel="stylesheet" href="assets/styles/navigation.css" />
-    <link rel="stylesheet" href="assets/styles/hero.css" />
-    <link rel="stylesheet" href="assets/styles/search.css" />
-    <link rel="stylesheet" href="assets/styles/promo.css" />
-    <link rel="stylesheet" href="assets/styles/testimonials.css" />
+  <!-- BOOTSTRAP -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" />
 
-    <!-- GOOGLE FONTS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+  <!-- MAIN CSS FILES -->
+  <link rel="stylesheet" href="assets/styles/main.css" />
+  <link rel="stylesheet" href="assets/styles/navigation.css" />
+  <link rel="stylesheet" href="assets/styles/hero.css" />
+  <link rel="stylesheet" href="assets/styles/search.css" />
+  <link rel="stylesheet" href="assets/styles/promo.css" />
+  <link rel="stylesheet" href="assets/styles/testimonials.css" />
 
-  <body>
-    <!-- sof: navigation -->
-    <nav class="navigation">navigation</nav>
-    <!-- eof: navigation -->
+  <!-- GOOGLE FONTS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&display=swap" rel="stylesheet" />
+</head>
 
-    <!-- sof: hero -->
-    <div class="hero">
-      <!-- sof: hero container -->
-      <div class="hero-container">
-        <div class="container">
-          <div class="col-2">One of three columns</div>
+<body>
+  <!-- sof: navigation -->
+  <nav class="navigation">
+    <ul class="nav mainmenu">
+      <li class="nav-item">
+        <a class="nav-link" href="#home">HOME</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#search">SEARCH</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#home"><img src="./assets/images/logo.webp" width="100px"></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#popular-recipes">POPULAR RECIPES</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#testimonials">TESTIMONIALS</a>
+      </li>
+    </ul>
+  </nav>
+  <!-- eof: navigation -->
+
+  <!-- sof: hero -->
+  <div class="hero" id="home">
+    <!-- sof: hero container -->
+    <div class="hero-container">
+      <div class="container">
+        <div class="row">
+          <div class="col social">
+            <div class="social-icon">
+              <a href="https://facebook.com" target="_blank"><img src="./assets/images/facebook-wt.webp"
+                  alt="facebook icon" width="60px"></a>
+              <a href="https://facebook.com" target="_blank">FACEBOOK</a>
+            </div>
+            <div class="social-icon">
+              <a href="https://instagram.com" target="_blank"><img src="./assets/images/instagram-wt.webp"
+                  alt="instagram icon" width="60px"></a>
+              <a href="https://instagram.com" target="_blank">INSTAGRAM</a>
+            </div>
+            <div class="social-icon">
+              <a href="https://youtube.com" target="_blank"><img src="./assets/images/youtube-wt.webp"
+                  alt="youtube icon" width="60px"></a>
+              <a href="https://youtube.com" target="_blank">YOUTUBE</a>
+            </div>
+          </div>
+          <div class="col"></div>
           <div class="col-6 hero-container-column-meta">
             <h1>Welcome to Fridge Friday!</h1>
             <p>
@@ -49,126 +80,117 @@
             </p>
             <button class="button button-primary">FIND OUT MORE</button>
           </div>
-          <div class="col"></div>
+          <div class="col-4"></div>
         </div>
       </div>
-      <!-- eof: hero container -->
-
-      <div class="hero-background"></div>
     </div>
-    <!-- eof: hero -->
+    <!-- eof: hero container -->
 
-    <main id="main" role="main">
-      <!-- sof: search recipe -->
-      <section class="search-recipe">
-        <div class="container">
-          <div class="search-recipe-meta">
-            <h2>What’s in your fridge?</h2>
-            <p>
-              Enter your ingredients separated by a comma to find delicious
-              recipe ideas. Fridge Freezer will do the rest !
-            </p>
-          </div>
+    <div class="hero-background"></div>
+  </div>
+  <!-- eof: hero -->
 
-          <div class="search-recipe-form">
-            <form>
-              <div class="form-group">
-                <input
-                  class="search-recipe-form-input"
-                  type="text"
-                  placeholder="Enter your ingredients"
-                />
-                <button
-                  class="button search-recipe-form-button"
-                  type="submit"
-                  class=""
-                >
-                  FIND RECIPES
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </section>
-      <!-- eof: search recipe -->
-
-      <!-- sof: popular recipes -->
-      <section class="popular-recipes">popular recipes section</section>
-      <!-- eof: popular recipes -->
-
-      <!-- sof: promo -->
-      <section class="promo">
-        <div class="promo-header">
-          <h1>Don't let your leftovers go to waste!</h1>
-        </div>
-        <div class="promo-text">
+  <main id="main" role="main">
+    <!-- sof: search recipe -->
+    <section class="search-recipe" id="search">
+      <div class="container">
+        <div class="search-recipe-meta">
+          <h2>What’s in your fridge?</h2>
           <p>
-            Are you looking for new and creative ways to use up your
-            ingredients? Fridge Friday can help!
+            Enter your ingredients separated by a comma to find delicious
+            recipe ideas. Fridge Freezer will do the rest !
           </p>
         </div>
-        <button class="button button-primary">GET RECIPE IDEAS</button>
-      </section>
-      <!-- eof: promo -->
 
-      <!-- sof: promo -->
-      <section class="testimonials">
-        <div class="container">
-          <div class="testimonials-header">
-            <h2>TESTIMONIALS</h2>
-          </div>
-          <div class="testimonials-text">
+        <div class="search-recipe-form">
+          <form>
+            <div class="form-group">
+              <input class="search-recipe-form-input" type="text" placeholder="Enter your ingredients" />
+              <button class="button search-recipe-form-button" type="submit" class="">
+                FIND RECIPES
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
+    <!-- eof: search recipe -->
+
+    <!-- sof: popular recipes -->
+    <section class="popular-recipes" id="popular-recipes">popular recipes section</section>
+    <!-- eof: popular recipes -->
+
+    <!-- sof: promo -->
+    <section class="promo">
+      <div class="promo-header">
+        <h1>Don't let your leftovers go to waste!</h1>
+      </div>
+      <div class="promo-text">
+        <p>
+          Are you looking for new and creative ways to use up your
+          ingredients? Fridge Friday can help!
+        </p>
+      </div>
+      <button class="button button-primary">GET RECIPE IDEAS</button>
+    </section>
+    <!-- eof: promo -->
+
+    <!-- sof: promo -->
+    <section class="testimonials" id="testimonials">
+      <div class="container">
+        <div class="testimonials-header">
+          <h2>TESTIMONIALS</h2>
+        </div>
+        <div class="testimonials-text">
+          <p>
+            Check out what our users are saying about their experience with
+            Fridge Friday
+          </p>
+        </div>
+        <div class="testimonials-boxes-container">
+          <div class="testimonials-boxes col">
+            <img src="" alt="" />
             <p>
-              Check out what our users are saying about their experience with
-              Fridge Friday
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Quaerat, sed veniam, animi odio delectus nulla sequi aliquid
+              commodi ad reiciendis itaque illum dignissimos eaque quasi
+              laboriosam ipsam voluptatem temporibus? Cupiditate!
             </p>
           </div>
-          <div class="testimonials-boxes-container">
-            <div class="testimonials-boxes col">
-              <img src="" alt="" />
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quaerat, sed veniam, animi odio delectus nulla sequi aliquid
-                commodi ad reiciendis itaque illum dignissimos eaque quasi
-                laboriosam ipsam voluptatem temporibus? Cupiditate!
-              </p>
-            </div>
-            <div class="testimonials-boxes col">
-              <img src="" alt="" />
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non
-                aliquid tempore, labore inventore deleniti ipsam? Mollitia,
-                dolorem. Fugiat voluptas, tempore, in quam ut necessitatibus eos
-                porro vel explicabo quia accusantium!
-              </p>
-            </div>
-            <div class="testimonials-boxes col">
-              <img src="" alt="" />
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
-                quibusdam quo, deserunt mollitia tenetur numquam atque non porro
-                aut. Ea vel eligendi veniam doloremque! Ullam voluptatibus
-                molestiae rem at sapiente!
-              </p>
-            </div>
+          <div class="testimonials-boxes col">
+            <img src="" alt="" />
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non
+              aliquid tempore, labore inventore deleniti ipsam? Mollitia,
+              dolorem. Fugiat voluptas, tempore, in quam ut necessitatibus eos
+              porro vel explicabo quia accusantium!
+            </p>
+          </div>
+          <div class="testimonials-boxes col">
+            <img src="" alt="" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
+              quibusdam quo, deserunt mollitia tenetur numquam atque non porro
+              aut. Ea vel eligendi veniam doloremque! Ullam voluptatibus
+              molestiae rem at sapiente!
+            </p>
           </div>
         </div>
-      </section>
-      <!-- eof: promo -->
-    </main>
+      </div>
+    </section>
+    <!-- eof: promo -->
+  </main>
 
-    <footer class="footer">footer</footer>
+  <footer class="footer">footer</footer>
 
-    <!-- JQUERY & BOOTSTRAP -->
-    <script
-      src="https://code.jquery.com/jquery-3.6.3.min.js"
-      integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- JQUERY & BOOTSTRAP -->
+  <script src="https://code.jquery.com/jquery-3.6.3.min.js"
+    integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- APP JS SCRIPT -->
-    <script src="assets/js/api.js"></script>
-    <script src="assets/js/app.js"></script>
-  </body>
+  <!-- APP JS SCRIPT -->
+  <script src="assets/js/api.js"></script>
+  <script src="assets/js/app.js"></script>
+</body>
+
 </html>
