feat: update api.js

--- a/index.html
+++ b/index.html
@@ -131,56 +131,6 @@
           </p>
         </div>
         <div class="popular-recipes-wrapper">
-          <div class="popular-recipes-card">
-            <div class="popular-recipe-card-image">
-              <img src="./assets/images/popular-recipe-template.webp" alt="recipe image" />
-            </div>
-            <div class="popular-recipe-card-body">
-              <h5 class="popular-recipe-card-title">
-                Baked salmon with fennel & tomatoes
-              </h5>
-              <p class="popular-recipe-card-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
-                nec placerat magna. Phasellus pharetra bibendum massa,
-                ullamcorper egestas nunc ultricies eget.
-              </p>
-              <button class="button button-primary">See More</button>
-            </div>
-          </div>
-
-          <div class="popular-recipes-card">
-            <div class="popular-recipe-card-image">
-              <img src="./assets/images/popular-recipe-template.webp" alt="recipe image" />
-            </div>
-            <div class="popular-recipe-card-body">
-              <h5 class="popular-recipe-card-title">
-                Baked salmon with fennel & tomatoes
-              </h5>
-              <p class="popular-recipe-card-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
-                nec placerat magna. Phasellus pharetra bibendum massa,
-                ullamcorper egestas nunc ultricies eget.
-              </p>
-              <button class="button button-primary">See More</button>
-            </div>
-          </div>
-
-          <div class="popular-recipes-card">
-            <div class="popular-recipe-card-image">
-              <img src="./assets/images/popular-recipe-template.webp" alt="recipe image" />
-            </div>
-            <div class="popular-recipe-card-body">
-              <h5 class="popular-recipe-card-title">
-                Baked salmon with fennel & tomatoes
-              </h5>
-              <p class="popular-recipe-card-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
-                nec placerat magna. Phasellus pharetra bibendum massa,
-                ullamcorper egestas nunc ultricies eget.
-              </p>
-              <button class="button button-primary">See More</button>
-            </div>
-          </div>
         </div>
       </div>
     </section>
@@ -207,8 +157,8 @@
         <div class="testimonials-header">
           <h2>TESTIMONIALS</h2>
         </div>
-        <div class="testimonials-text">
-          <p>
+
+          <p class="testimonials-text ">
             Check out what our users are saying about their experience with
             Fridge Friday
           </p>
