feat: buld random heros using the meal db api

--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
           <div class="col"></div>
 
           <div class="col-6 hero-container-column-meta">
-            <h1>Welcome to Fridge Friday!</h1>
-            <p>
+            <h1 class="hero-title">Welcome to Fridge Friday!</h1>
+            <p class="hero-text">
               Don't let your leftover ingredients go to waste. We create
               recipes based on the ingredients you have on hand, helping you
               reduce food waste and increase flavor in your meals. Try it out
               now!
             </p>
-            <button class="button button-primary">FIND OUT MORE</button>
+            <button class="hero-button button button-primary">FIND OUT MORE</button>
           </div>
           <div class="col-4"></div>
         </div>
@@ -162,9 +162,8 @@
             Check out what our users are saying about their experience with
             Fridge Friday
           </p>
-        </div>
 
-        <div class="testimonials-boxes-container">
+                  <div class="testimonials-boxes-container">
           <div class="testimonials-boxes col">
             <img class="testimonials-image" src="assets\images\testimonial-image-1.webp"
               alt="A photo of the testimonial giver" />
@@ -205,6 +204,9 @@
             <p class="testimonial-boxes-name">IRENE LUCERO</p>
           </div>
         </div>
+        </div>
+
+
       </div>
     </section>
     <!-- eof: promo -->
