feat: made navigation responsive

--- a/index.html
+++ b/index.html
@@ -29,23 +29,21 @@
 <body>
   <!-- sof: navigation -->
   <nav class="navigation">
-    <ul class="nav mainmenu">
-      <li class="nav-item">
+    <div class="container-fluid">
+      <div class="col-4"></div>
+      <div class="col menulinks">
         <a class="nav-link" href="#home">HOME</a>
-      </li>
-      <li class="nav-item">
         <a class="nav-link" href="#search">SEARCH</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#home"><img src="./assets/images/logo.webp" width="100px" /></a>
-      </li>
-      <li class="nav-item">
+      </div>
+      <div class="col-2 logo">
+        <a class="nav-link" href="#home"><img src="./assets/images/logo.webp" /></a>
+      </div>
+      <div class="col menulinks">
         <a class="nav-link" href="#popular-recipes">POPULAR RECIPES</a>
-      </li>
-      <li class="nav-item">
         <a class="nav-link" href="#testimonials">TESTIMONIALS</a>
-      </li>
-    </ul>
+      </div>
+      <div class="col-4"></div>
+    </div>
   </nav>
   <!-- eof: navigation -->
 
@@ -158,53 +156,53 @@
           <h2>TESTIMONIALS</h2>
         </div>
 
-          <p class="testimonials-text ">
-            Check out what our users are saying about their experience with
-            Fridge Friday
-          </p>
-        </div>
+        <p class="testimonials-text ">
+          Check out what our users are saying about their experience with
+          Fridge Friday
+        </p>
+      </div>
 
-        <div class="testimonials-boxes-container">
-          <div class="testimonials-boxes col">
-            <img class="testimonials-image" src="assets\images\testimonial-image-1.webp"
-              alt="A photo of the testimonial giver" />
-            <p>
-              I've been using this recipe website for a few months now and I
-              absolutely love it! The search function makes it easy to find
-              exactly what I'm looking for, and the step-by-step instructions
-              are always clear and easy to follow. Plus, the photos of each
-              recipe are so mouthwatering that I can't resist trying new
-              dishes!
-            </p>
-            <p class="testimonial-boxes-name">GRANT BOLTON</p>
-          </div>
-          <div class="testimonials-boxes col">
-            <img class="testimonials-image" src="assets\images\testimonial-image-2.webp"
-              alt="A photo of the testimonial giver" />
-            <p>
-              As a busy mom, I don't have a lot of time to plan out my
-              family's meals. But this recipe website has made meal planning
-              so much easier! I can search for recipes by ingredient, prep
-              time, and more, so I can find something that fits my needs and
-              schedule. Plus, my family has loved every recipe we've tried so
-              far!
-            </p>
-            <p class="testimonial-boxes-name">ANNA KLEIN</p>
-          </div>
-          <div class="testimonials-boxes col">
-            <img class="testimonials-image" src="assets\images\testimonial-image-3.webp"
-              alt="A photo of the testimonial giver" />
-            <p>
-              I'm not the most confident cook, but this recipe website has
-              helped me feel more comfortable in the kitchen. The detailed
-              instructions make it easy to follow along, and the helpful tips
-              and variations give me the freedom to customize recipes to my
-              liking. I've already recommended this website to all of my
-              friends!
-            </p>
-            <p class="testimonial-boxes-name">IRENE LUCERO</p>
-          </div>
+      <div class="testimonials-boxes-container">
+        <div class="testimonials-boxes col">
+          <img class="testimonials-image" src="assets\images\testimonial-image-1.webp"
+            alt="A photo of the testimonial giver" />
+          <p>
+            I've been using this recipe website for a few months now and I
+            absolutely love it! The search function makes it easy to find
+            exactly what I'm looking for, and the step-by-step instructions
+            are always clear and easy to follow. Plus, the photos of each
+            recipe are so mouthwatering that I can't resist trying new
+            dishes!
+          </p>
+          <p class="testimonial-boxes-name">GRANT BOLTON</p>
         </div>
+        <div class="testimonials-boxes col">
+          <img class="testimonials-image" src="assets\images\testimonial-image-2.webp"
+            alt="A photo of the testimonial giver" />
+          <p>
+            As a busy mom, I don't have a lot of time to plan out my
+            family's meals. But this recipe website has made meal planning
+            so much easier! I can search for recipes by ingredient, prep
+            time, and more, so I can find something that fits my needs and
+            schedule. Plus, my family has loved every recipe we've tried so
+            far!
+          </p>
+          <p class="testimonial-boxes-name">ANNA KLEIN</p>
+        </div>
+        <div class="testimonials-boxes col">
+          <img class="testimonials-image" src="assets\images\testimonial-image-3.webp"
+            alt="A photo of the testimonial giver" />
+          <p>
+            I'm not the most confident cook, but this recipe website has
+            helped me feel more comfortable in the kitchen. The detailed
+            instructions make it easy to follow along, and the helpful tips
+            and variations give me the freedom to customize recipes to my
+            liking. I've already recommended this website to all of my
+            friends!
+          </p>
+          <p class="testimonial-boxes-name">IRENE LUCERO</p>
+        </div>
+      </div>
       </div>
     </section>
     <!-- eof: promo -->
