fix popular nav with id

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <!-- eof: search recipe -->
 
       <!-- sof: popular recipes -->
-      <section class="popular-recipes">
+      <section class="popular-recipes" id="popular-recipes">
         <div class="container">
           <div class="popular-recipes-meta">
             <h2>Popular Recipes</h2>
