feat: add ingredients, recipe description and nutrition facts element

--- a/meal.html
+++ b/meal.html
@@ -73,11 +73,29 @@
       <!-- sof: popular recipes -->
       <section class="meal">
         <div class="container">
-          <div class="col-4 meal-ingredients">
+          <div class="col meal-ingredients">
             <h6>Ingredients</h6>
             <div class="meal-ingredients-list"></div>
           </div>
-          <div class="col-8 meal-instructions">instructions</div>
+          <div class="col-8 meal-instructions">
+            <h4>Cooking instructions</h4>
+          </div>
+        </div>
+      </section>
+      <!-- eof: popular recipes -->
+
+      <!-- sof: popular recipes -->
+      <section class="nutrition">
+        <div class="container">
+          <div class="nutrition-facts">
+            <h6>Nutrition facts</h6>
+            <div class="nutrition-facts-list">
+              <div class="nutrition-item">
+                <div class="nutrition-item-header">Item</div>
+                <div class="nutrition-item-body">Value</div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <!-- eof: popular recipes -->
