fix: remove null ingredients

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <input
                   class="search-recipe-form-input"
                   type="text"
-                  placeholder="Enter your ingredients"
+                  placeholder="Enter your ingredient"
                 />
                 <button
                   class="button search-recipe-form-button"
