--- a/meal.html
+++ b/meal.html
@@ -37,7 +37,7 @@
     <nav class="navigation">
       <div class="container-fluid">
         <div class="col-2 logo">
-          <a class="nav-link" href="#home"
+          <a class="nav-link" href="/index.html"
             ><img src="./assets/images/logo.webp"
           /></a>
         </div>
@@ -90,10 +90,10 @@
           <div class="nutrition-facts">
             <h6>Nutrition facts</h6>
             <div class="nutrition-facts-list">
-              <div class="nutrition-item">
+              <!-- <div class="nutrition-item">
                 <div class="nutrition-item-header">Item</div>
                 <div class="nutrition-item-body">Value</div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
