--- a/search.html
+++ b/search.html
@@ -36,7 +36,7 @@
     <nav class="navigation">
       <div class="container-fluid">
         <div class="col-2 logo">
-          <a class="nav-link" href="#home"
+          <a class="nav-link" href="/index.html"
             ><img src="./assets/images/logo.webp"
           /></a>
         </div>
