--- a/search.html
+++ b/search.html
@@ -36,7 +36,9 @@
     <nav class="navigation">
       <div class="container-fluid">
         <div class="col-2 logo">
-          <a class="nav-link" href="/index.html"
+          <a
+            class="nav-link"
+            href="https://wisethee.github.io/js-fridge-friday/"
             ><img src="./assets/images/logo.webp"
           /></a>
         </div>
