modify search instructions

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
           <div class="search-recipe-meta">
             <h2>What’s in your fridge?</h2>
             <p>
-              Enter your ingredients separated by a comma to find delicious
-              recipe ideas. Fridge Freezer will do the rest !
+              Enter your main ingredient to find delicious
+              recipe ideas. Fridge Friday will do the rest!
             </p>
           </div>
 
