fix: add search form validation

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                 </button>
               </div>
             </form>
+            <div class="search-error"></div>
           </div>
         </div>
       </section>
